force-app/main/default/objects/Employee_Leave_Account__c/Employee_Leave_Account__c.object-meta.xml
<CustomObject>
    <label>Employee Leave Account</label>
    <nameField>
        <displayFormat>ELA-{0000}</displayFormat>
        <label>Employee Leave Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Leave Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>