force-app/main/default/objects/Employee_Leave_Account__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Employee Leave Accounts</relationshipLabel>
    <relationshipName>Employee_Leave_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>