force-app/main/default/objects/Employee_Leave_Account__c/fields/Loss_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Loss_of_Pay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loss of Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>