force-app/main/default/objects/Employee_Leave_Account__c/fields/Number_of_Balance_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Balance_Leaves__c</fullName>
    <label>Number of Balance Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>