force-app/main/default/objects/Employee_Leave_Account__c/fields/Total_Leaves_In_Account__c.field-meta.xml
<CustomField>
    <fullName>Total_Leaves_In_Account__c</fullName>
    <label>Total Leaves In Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>