force-app/main/default/objects/Employee_Leave_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Availed_Leaves__c</columns>
    <columns>Number_of_Balance_Leaves__c</columns>
    <columns>Loss_of_Pay__c</columns>
    <columns>Total_Leaves_In_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>